# pokemon-game

./: CMakeLists.txt  PROPOSAL.md  README.md
data_classes/: move.cpp  move.h  pokemon_species.cpp  pokemon_species.h
game_data/: engine_data.cpp  engine_data.h
main/: engine_main.cpp
players/: computer_player.cpp  computer_player.h  human_player.cpp  human_player.h
pokemon_engine_interface/: pokemon_engine_interface.cpp  pokemon_engine_interface.h
pokemon_engine_main/: pokemon_engine_main.cpp
tests/: battle_math_tests.cpp  data_retrieval_tests.cpp  pokemon_data_tests.cpp  strategy_output_tests.cpp
